Removed deprecated readme section [ci skip]